kubernetes/api-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-service-ingress
  namespace: demo-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api-backend
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hello-python-service
            port:
              number: 6000
